# comfort-zone

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  README.rst
code/: BlockingReader.cpp  BlockingReader.hpp  BlockingWriter.cpp  BlockingWriter.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Computation.cpp  Computation.hpp  Engine.cpp  Engine.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  Hub.cpp  Hub.hpp  Listener.cpp  Listener.hpp  Promise.cpp  Promise.hpp  Request.cpp  Request.hpp  SocketChannel.cpp  SocketChannel.hpp  Stream.cpp  Stream.hpp  comfort-zone.hpp  fio.hpp  trace.hpp
demo/: CMakeLists.txt  demo.cpp  echo-client.cpp  echo-server.cpp  tcp-tunnel.cpp
test/: CMakeLists.txt  test-anonymous-pipe-get.cpp  test-anonymous-pipe-put.cpp  test-computation.cpp  test-engine-wait-for-any.cpp  test-mutex-acquire-asynchronous.cpp  test-mutex-acquire-synchronous.cpp  test-semaphore-decrement-asynchronous.cpp  test-semaphore-decrement-synchronous.cpp  test-socket-accept.cpp  test-socket-disconnect.cpp  test-thread-join-asynchronous.cpp  test-thread-join-synchronous.cpp
